--- a/RED2/RED2.csproj
+++ b/RED2/RED2.csproj
@@ -1,36 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net8.0-windows</TargetFramework>
-    <OutputType>WinExe</OutputType>
-    <ApplicationIcon>coffee.ico</ApplicationIcon>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
-    <ManifestCertificateThumbprint>12333660AF16C494E347751E1615A64A0EE33DAE</ManifestCertificateThumbprint>
-    <ManifestKeyFile>RED2_TemporaryKey.pfx</ManifestKeyFile>
-    <GenerateManifests>true</GenerateManifests>
-    <SignManifests>false</SignManifests>
-    <PublishUrl>publish\</PublishUrl>
-    <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
-    <UpdateMode>Foreground</UpdateMode>
-    <UpdateInterval>7</UpdateInterval>
-    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
-    <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
-    <MapFileExtensions>true</MapFileExtensions>
-    <SupportUrl>http://www.jonasjohn.de/</SupportUrl>
-    <ProductName>Remove Empty Directories</ProductName>
-    <PublisherName>Jonas John</PublisherName>
-    <AutorunEnabled>true</AutorunEnabled>
-    <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>2.3.0.0</ApplicationVersion>
-    <UseApplicationTrust>false</UseApplicationTrust>
-    <PublishWizardCompleted>true</PublishWizardCompleted>
-    <BootstrapperEnabled>true</BootstrapperEnabled>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <UseWindowsForms>true</UseWindowsForms>
-    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
-    <Configurations>Debug;Release;Release-x64;Release-x86</Configurations>
+    <TargetFramework>net8.0-windows</TargetFramework> <OutputType>WinExe</OutputType> <ApplicationIcon>coffee.ico</ApplicationIcon> <IsWebBootstrapper>false</IsWebBootstrapper> <ManifestCertificateThumbprint>12333660AF16C494E347751E1615A64A0EE33DAE</ManifestCertificateThumbprint> <ManifestKeyFile>RED2_TemporaryKey.pfx</ManifestKeyFile> <GenerateManifests>true</GenerateManifests> <SignManifests>false</SignManifests> <PublishUrl>publish\</PublishUrl> <Install>true</Install> <InstallFrom>Disk</InstallFrom> <UpdateEnabled>false</UpdateEnabled> <UpdateMode>Foreground</UpdateMode> <UpdateInterval>7</UpdateInterval> <UpdateIntervalUnits>Days</UpdateIntervalUnits> <UpdatePeriodically>false</UpdatePeriodically> <UpdateRequired>false</UpdateRequired> <MapFileExtensions>true</MapFileExtensions> <SupportUrl>http://www.jonasjohn.de/</SupportUrl> <ProductName>Remove Empty Directories</ProductName> <PublisherName>Jonas John</PublisherName> <AutorunEnabled>true</AutorunEnabled> <ApplicationRevision>0</ApplicationRevision> <ApplicationVersion>2.3.0.0</ApplicationVersion> <UseApplicationTrust>false</UseApplicationTrust> <PublishWizardCompleted>true</PublishWizardCompleted> <BootstrapperEnabled>true</BootstrapperEnabled> <GenerateAssemblyInfo>false</GenerateAssemblyInfo> <UseWindowsForms>true</UseWindowsForms> <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets> <Configurations>Debug;Release;Release-x64;Release-x86</Configurations>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>RED2.Program</StartupObject>
@@ -39,8 +9,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release-x86|AnyCPU'">
-    <OutputPath>bin\Release-x86\</OutputPath>
-    <Optimize>true</Optimize>
+    <OutputPath>bin\Release-x86\</OutputPath> <Optimize>true</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <OutputPath>bin\x86\Debug\</OutputPath>
@@ -49,16 +18,13 @@
     <OutputPath>bin\x86\Release\</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release-x86|x86'">
-    <OutputPath>bin\x86\Release-x86\</OutputPath>
-    <Optimize>true</Optimize>
+    <OutputPath>bin\x86\Release-x86\</OutputPath> <Optimize>true</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release-x64|AnyCPU'">
-    <OutputPath>bin\Release-x64\</OutputPath>
-    <Optimize>true</Optimize>
+    <OutputPath>bin\Release-x64\</OutputPath> <Optimize>true</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release-x64|x86'">
-    <OutputPath>bin\x86\Release-x64\</OutputPath>
-    <Optimize>true</Optimize>
+    <OutputPath>bin\x86\Release-x64\</OutputPath> <Optimize>true</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <OutputPath>bin\x64\Debug\</OutputPath>
@@ -67,12 +33,10 @@
     <OutputPath>bin\x64\Release\</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release-x86|x64'">
-    <OutputPath>bin\x64\Release-x86\</OutputPath>
-    <Optimize>true</Optimize>
+    <OutputPath>bin\x64\Release-x86\</OutputPath> <Optimize>true</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release-x64|x64'">
-    <OutputPath>bin\x64\Release-x64\</OutputPath>
-    <Optimize>true</Optimize>
+    <OutputPath>bin\x64\Release-x64\</OutputPath> <Optimize>true</Optimize>
   </PropertyGroup>
   <ItemGroup>
     <Compile Update="Lib\DeletionWorker.cs">
@@ -87,31 +51,18 @@
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
-      <Install>false</Install>
+      <Visible>False</Visible> <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName> <Install>false</Install>
     </BootstrapperPackage>
     <BootstrapperPackage Include="Microsoft.Net.Framework.2.0">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 2.0</ProductName>
-      <Install>false</Install>
+      <Visible>False</Visible> <ProductName>.NET Framework 2.0</ProductName> <Install>false</Install>
     </BootstrapperPackage>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1</ProductName>
-      <Install>true</Install>
+      <Visible>False</Visible> <ProductName>.NET Framework 3.5 SP1</ProductName> <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
     <PublishFile Include="coffee.ico">
-      <Visible>False</Visible>
-      <PublishState>Exclude</PublishState>
-      <IncludeHash>True</IncludeHash>
-      <Group>
-      </Group>
-      <TargetPath>
-      </TargetPath>
-      <FileType>File</FileType>
+      <Visible>False</Visible> <PublishState>Exclude</PublishState> <IncludeHash>True</IncludeHash> <Group></Group> <TargetPath></TargetPath> <FileType>File</FileType>
     </PublishFile>
   </ItemGroup>
   <ItemGroup>
